force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Cash_Type__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Cash_Type__c</fullName>
    <label>Cash Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>