force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Contact__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>