force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Effective_Date__c</fullName>
    <inlineHelpText>Effective Date</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>