force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Repost_Transaction__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Repost_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repost Transaction</label>
    <referenceTo>BGBK__Transaction__c</referenceTo>
    <relationshipLabel>Reposted For</relationshipLabel>
    <relationshipName>ReversalTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>