force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Reversed__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversed</label>
    <type>Checkbox</type>
</CustomField>