force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Status__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>