force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Sub_Type__c</fullName>
    <description>Transaction Sub Type</description>
    <inlineHelpText>Transaction Sub Type</inlineHelpText>
    <label>Sub Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>