force-app/main/default/objects/BGBK__Transaction__c/fields/BGBK__Type__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>