force-app/main/default/objects/BGBK__Transaction__c/validationRules/BGBK__Cash_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBK__Cash_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( BGBK__Cash_Type__c, ''),  ISPICKVAL(BGBK__Type__c, 'Cash'))</errorConditionFormula>
    <errorMessage>Cash Type is Required</errorMessage>
</ValidationRule>